--- a/src/app/profile-editor/profile-editor.component.scss
+++ b/src/app/profile-editor/profile-editor.component.scss
@@ -1,5 +1,9 @@
-form {
+.form {
     display : flex;
     flex-direction : column;
     align-items : center;
+ }
+
+ .updateProfileButton{
+     margin-top: 15px;
  }
